# r-tools

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  .yarnrc.yml  BUILD.bazel  MODULE.bazel  README.md  REPO.bazel  WORKSPACE.bazel  package.json
archive/rules/: BUILD.bazel  multibin.sh  rules.bzl
aws/rules/: BUILD.bazel  rules.bzl
bazel/artifact/: BUILD.bazel  rules.bzl  s3-upload-runner.sh.tpl  transitions.bzl
bazel/bazelrc/: BUILD.bazel  preset.bazelrc  protobuf.bazelrc
bazel/exec/: runner.sh.tpl
bazel/ibazel-rules/: BUILD.bazel  rules.bzl
bazel/ibazel-sock-activate/: BUILD.bazel
bazel/ibazel-sock-activate/src/redotech/ibazelsockactivate/: __main__.py
bazel/rules/: BUILD.bazel  command-runner.sh.tpl  http-gz.BUILD.bazel  path-executable.bazel.tpl  path.bzl  pre-run-runner.sh.tpl  query-targets.sh.tpl  rules.bzl  transitions.bzl  workspace.bzl
bazel/run/: BUILD.bazel
cmd/gzip/: BUILD.bazel  extensions.bzl  gzip.MODULE.bazel  rules.bzl  workspace.bzl
git/: BUILD.bazel  files.sh  lines.sh
github/workflow-inputs/: BUILD.bazel  action.yaml  tsconfig.json
github/workflow-inputs/src/: main.ts
net/rules/: BUILD.bazel  rules.bzl  sock-activate-proxy-runner.sh.tpl
net/sock-activate/: BUILD.bazel
net/sock-activate-proxy/: BUILD.bazel
net/sock-activate-proxy/src/redotech/sockactivateproxy/: __main__.py  asyncio.py
net/sock-activate/src/redotech/sockactivate/: __main__.py
python/net/: BUILD.bazel
python/net/src/redotech/net/: addr.py
rules/javascript/: rules.bzl
tools/bazel/: BUILD.bazel  deleted.bazelrc  refresh.sh
tools/bazel_/: BUILD.bazel  preset.bazelrc
tools/black/: BUILD.bazel
tools/file/: file.MODULE.bazel  files.bazel  files.bazelrc  workspace.bzl
tools/git/: BUILD.bazel  lines.sh
tools/lint/: BUILD.bazel
tools/nodejs/: BUILD.bazel  package.json  roots.bzl
tools/npm/: BUILD.bazel  npm.MODULE.bazel  npm.bzl  npm.json  workspace.bzl
tools/prettier/: BUILD.bazel
tools/run/: BUILD.bazel
tools/typescript/: BUILD.bazel
