module(name = "r_tools")

# Bazel Util

bazel_dep(name = "bazel_util")

BAZEL_UTIL_VERSION = "6b04cafa73358bbd8169f47483ff318f2bd92a8e"

archive_override(
    module_name = "bazel_util",
    sha256 = "35221e3060045b73857c06b9698a878ee79b406d294b1e7bfa51aa88727cf313",
    strip_prefix = "bazel-util-%s" % BAZEL_UTIL_VERSION,
    url = "https://github.com/redoapp/bazel-util/archive/%s.tar.gz" % BAZEL_UTIL_VERSION,
)

# Gzip

include("//cmd/gzip:gzip.MODULE.bazel")

# File

include("//tools/file:file.MODULE.bazel")

# Javascript

bazel_dep(name = "rules_javascript")

RULES_JAVASCRIPT_VERSION = "8e69a87965aa456f4d611fb6b38ca7897cfc1113"

archive_override(
    module_name = "rules_javascript",
    sha256 = "42147b63025b43c2c1b474b00e0cc8ebbd16600638f88a7416ea4828c972350e",
    strip_prefix = "rules_javascript-%s" % RULES_JAVASCRIPT_VERSION,
    url = "https://github.com/redoapp/rules_javascript/archive/%s.tar.gz" % RULES_JAVASCRIPT_VERSION,
)

# NPM

include("//tools/npm:npm.MODULE.bazel")

# Pkg

bazel_dep(name = "rules_pkg", version = "1.2.0")

# Platforms

bazel_dep(name = "platforms", version = "1.0.0")

# Skylib

bazel_dep(name = "bazel_skylib", version = "1.9.0")

# Shell

bazel_dep(name = "rules_shell_extra")

RULES_SHELL_EXTRA_VERSION = "93090b47f81577ba4890c770effd889f61ce5d19"

archive_override(
    module_name = "rules_shell_extra",
    sha256 = "c69a83b7afefa03b21c370c2044c63c41800820f51680022604133a098e2c932",
    strip_prefix = "rules_shell_extra-%s" % RULES_SHELL_EXTRA_VERSION,
    url = "https://github.com/redoapp/rules_shell_extra/archive/%s.tar.gz" % RULES_SHELL_EXTRA_VERSION,
)
