module(name = "r_tools")

# Bazel

bazel_dep(name = "bazel_lib", version = "3.2.1")
bazel_dep(name = "bazel_util")

BAZEL_UTIL_VERSION = "c0dcf8fac981f06ca86d2840761b3703da3a525a"

archive_override(
    module_name = "bazel_util",
    integrity = "sha256-PoekS5Uks+78YYQpIREdHJGicuSB8umpaB25umDdVLk=",
    strip_prefix = "bazel-util-%s" % BAZEL_UTIL_VERSION,
    url = "https://github.com/redoapp/bazel-util/archive/%s.tar.gz" % BAZEL_UTIL_VERSION,
)

# Gzip

include("//cmd/gzip:gzip.MODULE.bazel")

# File

include("//tools/file:file.MODULE.bazel")

# Javascript

bazel_dep(name = "rules_javascript")

RULES_JAVASCRIPT_VERSION = "f8a4f120bef0249f4d01edf81d1d45fdc8b77e75"

archive_override(
    module_name = "rules_javascript",
    integrity = "sha256-BQg3+TwZ6WMkFeGwOEtktsXo6rXBcUj7HBuFkfnHTJ0=",
    strip_prefix = "rules_javascript-%s" % RULES_JAVASCRIPT_VERSION,
    url = "https://github.com/redoapp/rules_javascript/archive/%s.tar.gz" % RULES_JAVASCRIPT_VERSION,
)

# NPM

include("//tools/npm:npm.MODULE.bazel")

# Pkg

bazel_dep(name = "rules_pkg", version = "1.2.0")

# Platforms

bazel_dep(name = "platforms", version = "1.0.0")

# Skylib

bazel_dep(name = "bazel_skylib", version = "1.9.0")

# Shell

bazel_dep(name = "rules_shell_extra")

RULES_SHELL_EXTRA_VERSION = "93090b47f81577ba4890c770effd889f61ce5d19"

archive_override(
    module_name = "rules_shell_extra",
    integrity = "sha256-xpqDt6/voDshw3DCBExjxBgAgg9RaAAiYEEzoJjiyTI=",
    strip_prefix = "rules_shell_extra-%s" % RULES_SHELL_EXTRA_VERSION,
    url = "https://github.com/redoapp/rules_shell_extra/archive/%s.tar.gz" % RULES_SHELL_EXTRA_VERSION,
)
