workspace(name = "r_tools")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_file")

# Bazelisk

BAZELISK_VERSION = "1.22.0"

http_file(
    name = "bazelisk_amd64_deb",
    downloaded_file_path = "bazelisk-amd64.deb",
    sha256 = "f3a9dd15b08f3f1350f2b2055cfee8a9c412c2050966f635633aaf30dd7e979e",
    url = "https://github.com/bazelbuild/bazelisk/releases/download/v%s/bazelisk-amd64.deb" % BAZELISK_VERSION,
)

# Skylib

SKYLIB_VERSION = "1.5.0"

http_archive(
    name = "bazel_skylib",
    sha256 = "cd55a062e763b9349921f0f5db8c3933288dc8ba4f76dd9416aac68acee3cb94",
    urls = ["https://github.com/bazelbuild/bazel-skylib/releases/download/%s/bazel-skylib-%s.tar.gz" % (SKYLIB_VERSION, SKYLIB_VERSION)],
)

# Aspect Bazel Lib

ASPECT_BAZEL_LIB_VERSION = "2.8.1"

http_archive(
    name = "aspect_bazel_lib",
    sha256 = "688354ee6beeba7194243d73eb0992b9a12e8edeeeec5b6544f4b531a3112237",
    strip_prefix = "bazel-lib-%s" % ASPECT_BAZEL_LIB_VERSION,
    url = "https://github.com/aspect-build/bazel-lib/releases/download/v%s/bazel-lib-v%s.tar.gz" % (ASPECT_BAZEL_LIB_VERSION, ASPECT_BAZEL_LIB_VERSION),
)

load("@aspect_bazel_lib//lib:repositories.bzl", "aspect_bazel_lib_dependencies", "aspect_bazel_lib_register_toolchains")

aspect_bazel_lib_dependencies()

aspect_bazel_lib_register_toolchains()

# Rules Shell Extra

RULES_SHELL_EXTRA_VERSION = "c3881c8b306583ddc35b8ce3272060574ca813ec"

http_archive(
    name = "rules_shell_extra",
    sha256 = "d021702eeee687df2af6fc246781cf68414d061e5b562231c59de587d541cd94",
    strip_prefix = "rules_shell_extra-%s" % RULES_SHELL_EXTRA_VERSION,
    url = "https://github.com/redoapp/rules_shell_extra/archive/%s.tar.gz" % RULES_SHELL_EXTRA_VERSION,
)

load("@rules_shell_extra//shfmt:workspace.bzl", "shfmt_repositories", "shfmt_toolchains")

shfmt_repositories()

shfmt_toolchains()

# Rules Python

RULES_PYTHON_VERSION = "1.3.0"

http_archive(
    name = "rules_python",
    sha256 = "2cc26bbd53854ceb76dd42a834b1002cd4ba7f8df35440cf03482e045affc244",
    strip_prefix = "rules_python-%s" % RULES_PYTHON_VERSION,
    url = "https://github.com/bazelbuild/rules_python/releases/download/%s/rules_python-%s.tar.gz" % (RULES_PYTHON_VERSION, RULES_PYTHON_VERSION),
)

load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")

py_repositories()

python_register_toolchains(
    name = "python_3_11",
    python_version = "3.11",
)

# Rules File

RULES_FILE_VERSION = "91265992ffbdc44748763bb765b88b98d466b3fa"

http_archive(
    name = "rules_file",
    sha256 = "12680251fb30918524a9a951d4b62f26009e1d4dc27e83f136512e684dfc1f2c",
    strip_prefix = "rules_file-%s" % RULES_FILE_VERSION,
    url = "https://github.com/redoapp/rules_file/archive/%s.zip" % RULES_FILE_VERSION,
)

load("@rules_file//rules:init.bzl", "file_init")

file_init()

load("@rules_file//rules:workspace.bzl", "file_repositories")

file_repositories()

load("@rules_file//buildifier:workspace.bzl", "buildifier_repositories", "buildifier_toolchains")

buildifier_repositories()

buildifier_toolchains()

# Rules pkg

RULES_PKG_VERSION = "0.10.1"

http_archive(
    name = "rules_pkg",
    sha256 = "d250924a2ecc5176808fc4c25d5cf5e9e79e6346d79d5ab1c493e289e722d1d0",
    url = "https://github.com/bazelbuild/rules_pkg/releases/download/%s/rules_pkg-%s.tar.gz" % (RULES_PKG_VERSION, RULES_PKG_VERSION),
)

# Rules Debian Extra

RULES_DEBIAN_EXTRA_VERSION = "7561056b1173c1bc93e1c2e2a8bc5d14763ab94c"

http_archive(
    name = "rules_debian_extra",
    sha256 = "13dc52a89a9ef8ca53f30d6cf710b934d4f17dcde4cd80557123a543f0aae936",
    strip_prefix = "rules_debian_extra-%s" % RULES_DEBIAN_EXTRA_VERSION,
    url = "https://github.com/redoapp/rules_debian_extra/archive/%s.tar.gz" % RULES_DEBIAN_EXTRA_VERSION,
)

# Rules Javascript

RULES_JAVASCRIPT_VERSION = "d1989ea35a6e63962b1b72b98d1170e73660d6bb"

http_archive(
    name = "better_rules_javascript",
    sha256 = "a9fc20f2e7c2b339162f39691aacee483b8710ca1c0ae99ee5fcca6db35d3c8a",
    strip_prefix = "rules_javascript-%s" % RULES_JAVASCRIPT_VERSION,
    url = "https://github.com/redoapp/rules_javascript/archive/%s.tar.gz" % RULES_JAVASCRIPT_VERSION,
)

load("@better_rules_javascript//rules:workspace.bzl", javascript_repositories = "repositories")

javascript_repositories(
    version = "20.15.1",
)

# Rivet Bazel Util

RIVET_BAZEL_UTIL_VERSION = "068ebb2fe6400516f761b729f6061e966c582abd"

http_archive(
    name = "rivet_bazel_util",
    sha256 = "446661ae8fde977fe6aebf0a145acf1962cd096be272c1ec7e79e57ccc0ec162",
    strip_prefix = "rivet-bazel-util-%s" % RIVET_BAZEL_UTIL_VERSION,
    url = "https://github.com/redoapp/rivet-bazel-util/archive/%s.tar.gz" % RIVET_BAZEL_UTIL_VERSION,
)

load("@rivet_bazel_util//ibazel:workspace.bzl", "ibazel_repositories", "ibazel_toolchains")

ibazel_repositories()

ibazel_toolchains()

# R Tools

load("//cmd/gzip:workspace.bzl", "gzip_repositories", "gzip_toolchains")

gzip_repositories()

gzip_toolchains()

load("//tools/file:workspace.bzl", "file_repositories")

file_repositories()

load("//tools/npm:workspace.bzl", "npm_repositories")

npm_repositories()
