workspace(name = "r_tools")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_file")

# Skylib

SKYLIB_VERSION = "1.5.0"

http_archive(
    name = "bazel_skylib",
    sha256 = "cd55a062e763b9349921f0f5db8c3933288dc8ba4f76dd9416aac68acee3cb94",
    urls = ["https://github.com/bazelbuild/bazel-skylib/releases/download/%s/bazel-skylib-%s.tar.gz" % (SKYLIB_VERSION, SKYLIB_VERSION)],
)

# Aspect Bazel Lib

ASPECT_BAZEL_LIB_VERSION = "2.8.1"

http_archive(
    name = "aspect_bazel_lib",
    sha256 = "688354ee6beeba7194243d73eb0992b9a12e8edeeeec5b6544f4b531a3112237",
    strip_prefix = "bazel-lib-%s" % ASPECT_BAZEL_LIB_VERSION,
    url = "https://github.com/aspect-build/bazel-lib/releases/download/v%s/bazel-lib-v%s.tar.gz" % (ASPECT_BAZEL_LIB_VERSION, ASPECT_BAZEL_LIB_VERSION),
)

load("@aspect_bazel_lib//lib:repositories.bzl", "aspect_bazel_lib_dependencies", "aspect_bazel_lib_register_toolchains")

aspect_bazel_lib_dependencies()

aspect_bazel_lib_register_toolchains()

# Rules Shell Extra

RULES_SHELL_EXTRA_VERSION = "4aa81e57a030f47a9b4e8fec84ae7ca917d368fd"

http_archive(
    name = "rules_shell_extra",
    sha256 = "9e52176e9f9741da37c62bfd62b5f285eb4bcc72a2600773cd735040f4e8a048",
    strip_prefix = "rules_shell_extra-%s" % RULES_SHELL_EXTRA_VERSION,
    url = "https://github.com/redoapp/rules_shell_extra/archive/%s.tar.gz" % RULES_SHELL_EXTRA_VERSION,
)

load("@rules_shell_extra//shfmt:workspace.bzl", "shfmt_repositories", "shfmt_toolchains")

shfmt_repositories()

shfmt_toolchains()

# Rules Python

RULES_PYTHON_VERSION = "1.3.0"

http_archive(
    name = "rules_python",
    sha256 = "2cc26bbd53854ceb76dd42a834b1002cd4ba7f8df35440cf03482e045affc244",
    strip_prefix = "rules_python-%s" % RULES_PYTHON_VERSION,
    url = "https://github.com/bazelbuild/rules_python/releases/download/%s/rules_python-%s.tar.gz" % (RULES_PYTHON_VERSION, RULES_PYTHON_VERSION),
)

load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")

py_repositories()

python_register_toolchains(
    name = "python_3_11",
    python_version = "3.11",
)

# Bazel Util

BAZEL_UTIL_VERSION = "a96e746ac898ab089185bb577287cdd6955724f1"

http_archive(
    name = "bazel_util",
    sha256 = "cf766842a4ad457d9387ec0c3a30c5becdad578c5215c0b94d4ebbf2df6c285a",
    strip_prefix = "bazel-util-%s" % BAZEL_UTIL_VERSION,
    url = "https://github.com/redoapp/bazel-util/archive/%s.tar.gz" % BAZEL_UTIL_VERSION,
)

load("@bazel_util//rules:init.bzl", "file_init")

file_init()

load("@bazel_util//rules:workspace.bzl", "file_repositories")

file_repositories()

load("@bazel_util//buildifier:workspace.bzl", "buildifier_repositories", "buildifier_toolchains")

buildifier_repositories()

buildifier_toolchains()

load("@bazel_util//ibazel:workspace.bzl", "ibazel_repositories", "ibazel_toolchains")

ibazel_repositories()

ibazel_toolchains()

# Rules pkg

RULES_PKG_VERSION = "0.10.1"

http_archive(
    name = "rules_pkg",
    sha256 = "d250924a2ecc5176808fc4c25d5cf5e9e79e6346d79d5ab1c493e289e722d1d0",
    url = "https://github.com/bazelbuild/rules_pkg/releases/download/%s/rules_pkg-%s.tar.gz" % (RULES_PKG_VERSION, RULES_PKG_VERSION),
)

# Rules Javascript

RULES_JAVASCRIPT_VERSION = "f8b54679df0da06115b9d338585018476d2ca0a1"

http_archive(
    name = "better_rules_javascript",
    sha256 = "b6623d4663b6777797cb6e23c7a9e8c06ec7649deca97d26b6b03144ea79ae5a",
    strip_prefix = "rules_javascript-%s" % RULES_JAVASCRIPT_VERSION,
    url = "https://github.com/redoapp/rules_javascript/archive/%s.tar.gz" % RULES_JAVASCRIPT_VERSION,
)

load("@better_rules_javascript//rules:workspace.bzl", javascript_repositories = "repositories")

javascript_repositories()

# R Tools

load("//cmd/gzip:workspace.bzl", "gzip_repositories", "gzip_toolchains")

gzip_repositories()

gzip_toolchains()

load("//tools/file:workspace.bzl", "file_repositories")

file_repositories()

load("//tools/npm:workspace.bzl", "npm_repositories")

npm_repositories()
