load("@rules_shell_extra//shell:rules.bzl", "sh_binary")

package(default_visibility = ["//visibility:public"])

sh_binary(
    name = "files",
    main = "files.sh",
)

sh_binary(
    name = "lines",
    data = [":files"],
    main = "lines.sh",
)

sh_binary(
    name = "refs_cleanup",
    data = [":files"],
    main = "refs-cleanup.sh",
)

sh_binary(
    name = "refs_remote_cleanup",
    data = [":files"],
    main = "refs-remote-cleanup.sh",
)
