load("@bazel_skylib//rules:common_settings.bzl", "int_flag", "string_flag")

package(default_visibility = ["//visibility:public"])

exports_files(["s3-upload-runner.sh.tpl"])

string_flag(
    name = "compilation_mode",
    build_setting_default = "",
)

string_flag(
    name = "platforms",
    build_setting_default = "",
)

int_flag(
    name = "stamp",
    build_setting_default = -1,
)
