load("@rules_shell_extra//shell:rules.bzl", "sh_binary")

package(default_visibility = ["//visibility:public"])

sh_binary(
    name = "refresh",
    data = [
        "//github/workflow-inputs:gen",
        "//tools/nodejs:roots",
        "@files//packages:bazelrc",
    ],
    main = "refresh.sh",
)
