package(default_visibility = ["//visibility:public"])

filegroup(
    name = "bazel_files",
    srcs = glob(["files/**/*.bazel", "files/**/*.bzl"]),
)

filegroup(
    name = "prettier_files",
    srcs = glob(
        [
            "files/**/*.md",
            "files/**/.*.yaml",
            "files/**/*.yaml",
        ],
    ),
)

filegroup(
    name = "shfmt_exec_files",
    srcs = glob(["files/.github/**/*"], exclude = [
        "files/**/.*",
        "files/**/*.*",
        "files/**/CODEOWNERS",
    ], allow_empty = True),
)

filegroup(
    name = "shfmt_files",
    srcs = glob(["files/**/*.sh"]),
)
