package(default_visibility = ["//visibility:public"])

alias(
    name = "files",
    actual = "//git:files",
)

alias(
    name = "lines",
    actual = "//git:lines",
)

alias(
    name = "refs_cleanup",
    actual = "//git:refs_cleanup",
)

alias(
    name = "refs_remote_cleanup",
    actual = "//git:refs_remote_cleanup",
)
