load("@bazel_util//query:rules.bzl", "query_bzl")
load("@rules_javascript//nodejs:rules.bzl", "nodejs_install", "nodejs_modules_package")
load("@rules_javascript//typescript:rules.bzl", "js_import_ts")
load("@npm//:roots.bzl", NPM_ROOTS = "ROOTS")
load(":roots.bzl", ROOTS = "TARGETS")

package(default_visibility = ["//visibility:public"])

query_bzl(
    name = "roots",
    out = "roots.bzl",
    query = "kind('cjs_root', //...)",
)

nodejs_install(
    name = "install",
    src = ":node_modules",
)

nodejs_modules_package(
    name = "node_modules",
    links = ROOTS,
    deps = [":npm_%s" % dep.name for dep in NPM_ROOTS],
)

[
    js_import_ts(
        name = "npm_%s" % dep.name,
        dep = "@npm//%s:lib" % dep.name,
    )
    for dep in NPM_ROOTS
]
