load("@rules_javascript//javascript:rules.bzl", "js_library")
load("@rules_javascript//nodejs:rules.bzl", "nodejs_binary")
load("@rules_javascript//npm:rules.bzl", "yarn_audit_test", "yarn_resolve")

package(default_visibility = ["//visibility:public"])

yarn_audit_test(
    name = "audit",
    data = [
        "//:package.json",
        "//:yarn.lock",
    ],
    path = "/r_tools",
    tags = [
        "no-cache",
        "no-sandbox",
    ],
)

yarn_resolve(
    name = "resolve",
    output = "npm.bzl",
    path = "/",
)
