yarn = use_extension("@rules_javascript//npm:extensions.bzl", "yarn")
yarn.workspace(
    name = "r_tools_npm",
    data = "//tools/npm:npm.json",
    path = "/",
    plugins = [
        "@rules_javascript//commonjs:npm_plugin.bzl",
        "@rules_javascript//typescript:npm_plugin.bzl",
    ],
)
use_repo(yarn, npm = "r_tools_npm")
